Kubernetes/06-ingress-todo-app/ingress-todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  selector:
    app: todo-api
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 8082
