Kubernetes/06-ingress-todo-app/ingress-todo-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui-service
spec:
  selector:
    app: todo-ui
  ports:
    - name: http
      port: 3001
      targetPort: 80
