Kubernetes/06-ingress-todo-app/ingress-todo-api-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo-api-ui
spec:
  rules:
    - host: todo.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-ui-service
                port:
                  number: 3001
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-api-service
                port:
                  number: 3000
